kubernetes/prod/firefly/firefly-iii-pico/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: firefly-pico
  namespace: firefly
  labels:
    app: firefly-pico
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: firefly-pico
  template:
    metadata:
      labels:
        app: firefly-pico
    spec:
      restartPolicy: Always
      containers:
      - image: cioraneanu/firefly-pico:latest
        name: firefly-pico
        ports:
        - containerPort: "80"
          protocol: TCP
          name: firefly-pico

      - image: postgres:latest
        name: firefly-pico-postgresql
        ports:
        - containerPort: "5432"
          protocol: TCP
          name: firefly-pico-postgresql
        volumeMounts:
        - mountPath: "/var/lib/postgresql/data"
          name: firefly-pico-pgsql
      volumes:
        - name: firefly-pico-pgsql
          persistentVolumeClaim:
            claimName: firefly-pico-pgsql
