kubernetes/prod/firefly/firefly-iii-pico/services.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: firefly-pico
  namespace: firefly
spec:
  type: ClusterIP
  ports:
    - port: 80
      name: firefly-pico
  selector:
    app: firefly-pico
---
apiVersion: v1
kind: Service
metadata:
  name: firefly-pico-pgsql
  namespace: firefly
spec:
  type: ClusterIP
  ports:
    - port: 5432
      name: pico-pgsql
  selector:
    app: firefly-pico
