kubernetes/prod/firefly/firefly-iii-pico/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels:
    app.kubernetes.io/instance: firefly-pico
    app.kubernetes.io/name: firefly-pico
  name: firefly-pico
  namespace: firefly
spec:
  ingressClassName: traefik
  rules:
  - host: budget.nmoura.pt
    http:
      paths:
      - backend:
          service:
            name: firefly-pico
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - budget.nmoura.pt
    secretName: nmoura-pt-tls
